--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>RPG Helper</title>
-        <link rel="icon" data-trunk href="./img/ico/Dice.ico" />
+        <link rel="icon" data-trunk href="./img/ico/Dice RPG Icon.ico" />
         <link data-trunk rel="copy-dir" href="img">
     </head>
     <body></body>
