Not dealing with nix right now

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>RPG Helper</title>
         <link data-trunk rel="rust" data-bin="client" />
-        <link data-trunk rel="css" href="./style.css" />
+        <!-- <link data-trunk rel="css" href="./style.css" /> -->
     </head>
     <body>
         <div id="app"></div>
