Setup theming framework and decided on core theme

--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>RPG Helper</title>
         <link data-trunk rel="rust" data-bin="client" />
-        <!-- <link data-trunk rel="css" href="./style.css" /> -->
+        <link data-trunk rel="css" href="./style.css" />
+
+        <link rel="icon" data-trunk href="./assets/Dice RPG Icon.ico" />
+        <link data-trunk rel="copy-dir" href="./assets">
+
+        <!-- Google Fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Macondo&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=Winky+Sans:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     </head>
     <body>
         <div id="app"></div>
