Revised logo, working on core style

--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
         <link data-trunk rel="rust" data-bin="client" />
         <link data-trunk rel="css" href="./style.css" />
 
-        <link rel="icon" data-trunk href="./assets/Dice RPG Icon.ico" />
+        <link rel="icon" data-trunk href="./assets/RPG-Helper-Logo-BG.svg" />
         <link data-trunk rel="copy-dir" href="./assets">
 
         <!-- Google Fonts -->
